fixing spacing on mobile

--- a/quiz.css
+++ b/quiz.css
@@ -281,7 +281,7 @@ img{
         flex-wrap: wrap;
         justify-content: center;
         text-align: center;
-        height: 15.5vh;
+        height: 20vh;
     }
 
     #talleys{
